# finsight

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.py  settings.py  settings.yaml
finsight_agent/: prompt.md
finsight_agent/tools/csv_processor/: database.py  store_expenses.py
