[project]
name = "finsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "google-adk>=1.15.1",
    "gradio>=5.48.0",
    "pgvector>=0.3.8",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
]
